@@ -850,6 +850,9 @@ set_attr 'ATTRIBUTE' 'NEWVALUE'::
     Assign 'NEWVALUE' to the specified 'ATTRIBUTE' as described in the
     <<OBJECTS,*OBJECTS section*>>.
 
+type_of_attr 'ATTRIBUTE'::
+    Print (one line containing) the type of the specified 'ATTRIBUTE'.
+
 new_attr *bool*|*color*|*int*|*string*|*uint* 'PATH' ['VALUE']::
     Creates a new attribute with the name and in the object specified by 'PATH'.
     Its type is specified by the first argument. The attribute name has to begin
